
# Add the subdirectories of the applications
add_subdirectory(q2p1_parallel_time)
add_subdirectory(q2p1_fac_nnewt)
add_subdirectory(q2p1_fac_visco)
add_subdirectory(q1_scalar)
add_subdirectory(q2p1_bench_sedimentation)
add_subdirectory(q2p1_fc2)
add_subdirectory(q2p1_fsi_bench)
add_subdirectory(laplace)
add_subdirectory(stream)
add_subdirectory(q2p1_fc_ext)
add_subdirectory(q2p1_span)
add_subdirectory(q2p1_lubrication_lab)
add_subdirectory(q2p1_drill)
add_subdirectory(q2p1_rotation)
add_subdirectory(q2p1_experimental)
add_subdirectory(q2p1_euler_fibers)
add_subdirectory(iniparser_demo)
add_subdirectory(fem_sandbox)
add_subdirectory(q2p1_hashgrid_test)

if(USE_CGAL)
  add_subdirectory(q2p1_geom_test)
  add_subdirectory(q2p1_movbc)
  add_subdirectory(q2p1_die)
  add_subdirectory(q2p1_sse)
  add_subdirectory(q2p1_sse_mesh)
  add_subdirectory(q2p1_sse_melt)
  add_subdirectory(q2p1_sse_partfil)
  add_subdirectory(q1_scalar_melt)
  add_subdirectory(q1_scalar_multimat)
  add_subdirectory(q1_scalar_partfil)
  add_subdirectory(s3d_mesher)
  add_subdirectory(heat)
  add_subdirectory(q2p1_sse_temp)
  add_subdirectory(auto_param)
  add_subdirectory(STLvsTRI)
  add_subdirectory(mesh_proc)
  add_subdirectory(mesh_ref)
  add_subdirectory(q2p1_particle_tracer)
  add_subdirectory(q2p1_particle_tracer_xse)
  add_subdirectory(q2p1_xParticles)
  add_subdirectory(q2p1_ATC)
endif(USE_CGAL)

if (USE_HYPRE)
  #add_subdirectory(hypre_test)
endif (USE_HYPRE)


if(USE_OPTICALTWEEZERS)
  add_subdirectory(q2p1_optic_tweezers)
endif(USE_OPTICALTWEEZERS)

if(USE_MUMPS)
  if(${Q2P1_BUILD_ID} MATCHES "intel")
    # add_subdirectory(mumps_test)
       add_subdirectory(q2p1_cc)
       add_subdirectory(mumps_test)
  else(${Q2P1_BUILD_ID} MATCHES "intel")
    message(FATAL_ERROR "The MUMPS library requires the intel compiler. Choose a build-id with the intel compiler to resolve this issue.")
  endif(${Q2P1_BUILD_ID} MATCHES "intel")
endif(USE_MUMPS)
